# CutCubeWithArucoPlane

./: README.md
build_model/: CMakeLists.txt
build_model/include/build_model/: camera.h  common_include.h  config.h  qrplane.h
build_model/src/: camera.cpp  get_image.cpp  main.cpp  qrplane.cpp
realsense_driver/: CMakeLists.txt
realsense_driver/launch/: realsense.launch
realsense_driver/src/: data_service.cpp  realsense_driver.cpp
realsense_msgs/: CMakeLists.txt
